--- a/TestRelativePanel/Views/MainPage.xaml
+++ b/TestRelativePanel/Views/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+<Page
     x:Class="TestRelativePanel.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,20 +7,23 @@
     Background="{ThemeResource SolidBackgroundFillColorBaseBrush}"
     mc:Ignorable="d">
 
-    <Grid x:Name="ContentArea">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="48" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
+	<StackPanel>
 
-        <TextBlock
-            Grid.Row="0"
-            x:Uid="Main_Title"
-            Style="{StaticResource PageTitleStyle}" />
+		<RelativePanel Width="400" Height="100" Background="Aquamarine" >
+			<Button Content="Button" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignRightWithPanel="True"
+					RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignBottomWithPanel="True" />
+		</RelativePanel>
 
-        <Grid Grid.Row="1">
-            
-        </Grid>
-        
-    </Grid>
+		<RelativePanel Width="400" Height="100" Background="Aquamarine" Margin="0,20,0,0" >
+			<ComboBox RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignRightWithPanel="True"
+					  RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignBottomWithPanel="True" />
+		</RelativePanel>
+
+		<RelativePanel Width="400" Height="100" Background="Aquamarine" Margin="0,20,0,0" >
+			<TextBox Text="TextBox" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignRightWithPanel="True"
+					 RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignBottomWithPanel="True" />
+		</RelativePanel>
+
+	</StackPanel>
+
 </Page>
